; ModuleID = '/home/carl/AnghaBench/libgit2/src/win32/extr_path_w32.c_path_is_volume.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/win32/extr_path_w32.c_path_is_volume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i32] [i32 92, i32 63, i32 63, i32 92, i32 86, i32 111, i32 108, i32 117, i32 109, i32 101, i32 123, i32 0], align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64)* @path_is_volume to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @path_is_volume(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %2
  %8 = load i32*, i32** %3, align 8
  %9 = call i64 @wcsncmp(i32* %8, i8* bitcast ([12 x i32]* @.str to i8*), i32 11)
  %10 = icmp eq i64 %9, 0
  br label %11

11:                                               ; preds = %7, %2
  %12 = phi i1 [ false, %2 ], [ %10, %7 ]
  %13 = zext i1 %12 to i32
  ret i32 %13
}

declare dso_local i64 @wcsncmp(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
